# aaa-backend

./: .env.example  .gitignore  .gpt_sent  README.md  Taskfile.yml  aaa_backup.sql  alembic.ini  bundle_for_review.py  bundle_remaining.py  curl-gen.html  db-viewer.html  menu.json  project_payload.txt  promote_user.py  pyproject.toml  remaining_payload.txt  run.py  seed_menu.py
alembic/: env.py
alembic/versions/: 02b291c4315a_create_messages_table.py  0490c6a4610a_create_reservations_reservation_.py  4141b0baf29c_create_menu_items.py  42e0ea416d12_add_users_created_at.py  7dbeedae6d04_create_seats.py  81328bd88d6b_seed_abeyton_dining_rooms_and_tables.py  a55c7b1ad9e9_add_role_and_update_models.py  adfb3520ae24_seed_menu_items.py  b643049bc2e9_create_orders.py  c010172491bd_create_dining_rooms.py  c85a232738a2_seed_dining_rooms_actual.py  cbfd7551360c_create_order_items.py  e2c92ebea9fb_add_users_password_hash.py  fe43eeb6784d_attendees_require_member_or_guest_name.py
app/: database.py  main.py
app/core/: config.py
app/models/: __init__.py  member.py  order.py  order_item.py  reservation.py  reservation_attendee.py  revoked_token.py  seat.py  seat_assignment.py  user.py
app/schemas/: dining_room.py  member.py  menu_item.py  messages.py  order_items.py  reservation.py  reservation_attendee.py  seat_assignment.py  table.py  user.py
scripts/: dev.sh  run.sh
scripts/admin/: promote_user.py
scripts/data/: dining_rooms.json  import_menu_json.py  menu.json  seed_menu.py
scripts/db/: makemigration.sh  migrate.sh
scripts/ops/: check_env.py  dev.sh  ready.sh  (+3 more)
(+73 files in other folders)
